Added library sml (Simple Media Library) awaiting a better name, this contains all the common functions from the samples. All samples have been fixed to use the same version. Added new sprite (with transparency) file to the library and a matching sml_sprite_demo to show its use.

--- a/dingoo_sdk/install
+++ b/dingoo_sdk/install
@@ -11,6 +11,7 @@ if [ ! -d "$MIPSTOOLS" ]; then
 fi
 
 cd $DINGOO_SDK/src/libc && make
+cd $DINGOO_SDK/src/sml && make
 cd $DINGOO_SDK/src/fgl && make
 cp $MIPSTOOLS/lib/gcc/mipsel-linux/*/libgcc.a $DINGOO_SDK/lib/
 
