--- a/trunk/dingoo_sdk/install
+++ b/trunk/dingoo_sdk/install
@@ -10,18 +10,22 @@ if [ ! -d "$MIPSTOOLS" ]; then
 	exit 0
 fi
 
-cd $DINGOO_SDK/src/libc && make
-cd $DINGOO_SDK/src/sml && make
-cd $DINGOO_SDK/src/fgl && make
+cd $DINGOO_SDK/src/libc && make clean && make
+cd $DINGOO_SDK/src/sml && make clean && make
+cd $DINGOO_SDK/src/fgl && make clean && make
+rm -f $DINGOO_SDK/lib/libgcc.a
 cp $MIPSTOOLS/lib/gcc/mipsel-linux/*/libgcc.a $DINGOO_SDK/lib/
 
 if [ -d "$WINDIR" ]; then
 	$DINGOO_SDK/tools/mipstools_fix/mipstools_fix
 else
+	rm -f $DINGOO_SDK/tools/elf2app/elf2app
 	cc $DINGOO_SDK/tools/elf2app/src/elf2app.c -o $DINGOO_SDK/tools/elf2app/elf2app
+	rm -f $DINGOO_SDK/tools/bin2h/bin2h
 	cc $DINGOO_SDK/tools/bin2h/src/bin2h.c -o $DINGOO_SDK/tools/bin2h/bin2h
 fi
 
+rm -f $DINGOO_SDK/lib/dingoo.xn
 echo "ENTRY(AppMain)
 OUTPUT_FORMAT("elf32-tradlittlemips")
 SECTIONS { .dingoo 0x80A00000 : { $DINGOO_SDK/lib/dingoo.o (.text)
