--- a/wiki/Placeholder.wiki
+++ b/wiki/Placeholder.wiki
@@ -1,5 +1,24 @@
-#summary Temporary place-holder.
+#summary The primary goals of the Dingoo_SDK project.
+#labels Featured,Phase-Deploy,Phase-Support,Phase-Requirements,Phase-Design
 
 = Introduction =
 
-Dingoo_SDK -- a multiplatform SDK for the Dingoo A320.
+Dingoo_SDK is meant to serve as a multiplatform SDK for the Dingoo A320.
+
+== Requirements ==
+= Linux =
+  * [ftp://ftp.ingenic.cn/3sw/01linux/00toolchain/ Ingenic toolchain]
+  * Python 2.5 (for extract_doc.py tool only)
+  * GNU make
+  * TODO: add more requirements as needed
+= Windows =
+  * CYGWIN (TODO: minimum version?)
+  * Windows SDK (TODO: S2SDK?)
+  * TODO: add more requirements as needed
+== Getting Help ==
+= ReadMe.txt =
+The ReadMe.txt file included in the highest level of the $DINGOO_SDK directory is the first place you should check for help. There are step-by-step installation instructions there for both Windows and Linux/UNIX build environments.
+= Wiki =
+The wiki is currently a work-in-progress and may not contain much helpful information at the moment, but we are actively working on it.
+= Issues =
+The issues tracker is the best place to post bugs or other unusual errors that aren't the result of a failed or incorrect installation (see the ReadMe.txt file). We are also open to feature requests and suggestions as time allows.
