--- a/wiki/smlcontrolh.wiki
+++ b/wiki/smlcontrolh.wiki
@@ -2,7 +2,6 @@
 Defines the button codes and methods for polling the buttons for changes in
 their state.
 ==Macros==
-<a name="controlcodes"></a>
 ===Control codes===
   * *CONTROL_POWER*: the power slider (does not track the HOLD position)
   * *CONTROL_BUTTON_A*: the A button
@@ -19,10 +18,9 @@ their state.
   * *CONTROL_DPAD_RIGHT*: the RIGHT button on the directional pad
 
 ===Methods===
-  * _int_ *control_just_pressed*( [#controlcodes control_code] ): returns 0 if the control state is set to "just recently pressed", non-zero otherwise.
-  * _int_ *control_just_released*( [#controlcodes control_code] ): returns 0 if the control state is set to "just recently released", non-zero otherwise.  * _int_ *control_still_pressed*( [#controlcodes control_code] ): returns 0 if the control state is set to "still pressed", non-zero otherwise.  * _int_ *control_still_released*( [#controlcodes control_code] ): returns 0 if the control state is set to "still released", non-zero otherwise.
+  * _int_ *control_just_pressed*( [#Control_codes control_code] ): returns 0 if the control state is set to "just recently pressed", non-zero otherwise.
+  * _int_ *control_just_released*( [#Control_codes control_code] ): returns 0 if the control state is set to "just recently released", non-zero otherwise.  * _int_ *control_still_pressed*( [#Control_codes control_code] ): returns 0 if the control state is set to "still pressed", non-zero otherwise.  * _int_ *control_still_released*( [#Control_codes control_code] ): returns 0 if the control state is set to "still released", non-zero otherwise.
 ==Structs==
-<a name="controlstate"></a>
 ===control_state===
 Members:
   * _bool_ *changed*: indicates this control has changed since the last check
@@ -33,5 +31,5 @@ Non-macro global methods.
   * _void_ *control_init*( _void_ ): initializes the control state tracker
   * _void_ *control_term*( _void_ ): terminates the control state tracker
   * _void_ *control_poll*( _void_ ): updates the control state tracker
-  * [#controlstate control_state] *control_check*( [#controlcodes control_code] ): gets the status of the specified control
-  * _void_ *control_lock*( [#controlcodes control_code] ): prevents the specified control from being tracked
+  * [#control_state control_state] *control_check*( [#Control_codes control_code] ): gets the status of the specified control
+  * _void_ *control_lock*( [#Control_codes control_code] ): prevents the specified control from being tracked
