--- a/wiki/GeneralInformation.wiki
+++ b/wiki/GeneralInformation.wiki
@@ -6,19 +6,19 @@
 Dingoo_SDK is meant to serve as a multiplatform SDK for the Dingoo A320.
 
 == Requirements ==
-= Linux =
+=== Linux ===
   * [ftp://ftp.ingenic.cn/3sw/01linux/00toolchain/ Ingenic toolchain]
   * Python 2.5+ (for extract_doc.py tool only)
   * GNU make
-= Windows =
+=== Windows ===
   * [http://www.cygwin.com/setup.exe CYGWIN (Latest version, though any version should work)]
     * Python 2.5+ (for extract_doc.py tool only)
     * GNU make
   * [http://flatmush.juliusparishy.com/a320/toolchain/mipsel-gcc4.1-cygwin-nopic.tar.bz2 Windows MIPSEL Compiler]
 == Getting Help ==
-= ReadMe.txt =
+=== ReadMe.txt ===
 The ReadMe.txt file included in the highest level of the $DINGOO_SDK directory is the first place you should check for help. There are step-by-step installation instructions there for both Windows and Linux/UNIX build environments.
-= Wiki =
+=== Wiki ===
 The wiki is currently a work-in-progress and may not contain much helpful information at the moment, but we are actively working on it.
-= Issues =
+=== Issues ===
 The issues tracker is the best place to post bugs or other unusual errors that aren't the result of a failed or incorrect installation (see the ReadMe.txt file). We are also open to feature requests and suggestions as time allows.
