Added a new library called jz4740 to directly control jz4740 hardware, currently has headers for cpm and emc, mostly for clocking. Added cpu to sml to allow for over/underclocking. Added sml_overclock sample app which overclocks the dingoo better than A600's app. Fixed AstroLander sample to work with new fixmath additions. Fixed install script to add new libs. Added RAM datasheets for both types of dingoo ram to the doc folder.

--- a/dingoo_sdk/install
+++ b/dingoo_sdk/install
@@ -11,6 +11,7 @@ if [ ! -d "$MIPSTOOLS" ]; then
 fi
 
 cd $DINGOO_SDK/src/libc && make clean && make
+cd $DINGOO_SDK/src/jz4740 && make clean && make
 cd $DINGOO_SDK/src/sml && make clean && make
 cd $DINGOO_SDK/src/fgl && make clean && make
 rm -f $DINGOO_SDK/lib/libgcc.a
