--- a/wiki/GeneralInformation.wiki
+++ b/wiki/GeneralInformation.wiki
@@ -8,11 +8,11 @@ Dingoo_SDK is meant to serve as a multiplatform SDK for the Dingoo A320.
 == Requirements ==
 === Linux ===
   * [ftp://ftp.ingenic.cn/3sw/01linux/00toolchain/ Ingenic toolchain]
-  * Python 2.5+ (for extract_doc.py tool only)
+  * Doxygen 1.5.8 (for building the documentation)
   * GNU make
 === Windows ===
   * [http://www.cygwin.com/setup.exe CYGWIN (Latest version, though any version should work)]
-    * Python 2.5+ (for extract_doc.py tool only)
+    * Doxygen 1.5.8 (for building the documentation)
     * GNU make
   * [http://flatmush.juliusparishy.com/a320/toolchain/mipsel-gcc4.1-cygwin-nopic.tar.bz2 Windows MIPSEL Compiler]
 == Getting Help ==
@@ -20,5 +20,7 @@ Dingoo_SDK is meant to serve as a multiplatform SDK for the Dingoo A320.
 The [http://code.google.com/p/dingoo-sdk/source/browse/trunk/dingoo_sdk/ReadMe.txt ReadMe.txt] file included in the highest level of the $DINGOO_SDK directory is the first place you should check for help. There are step-by-step installation instructions there for both Windows and Linux/UNIX build environments.
 === Wiki ===
 The wiki is currently a work-in-progress and may not contain much helpful information at the moment, but we are actively working on it.
+=== Documentation ===
+Use Doxygen to build HTML documentation in the $DINGOO_SDK/doc directory. See the [http://code.google.com/p/dingoo-sdk/source/browse/trunk/dingoo_sdk/ReadMe.txt ReadMe.txt] for instructions.
 === Issues ===
 The issues tracker is the best place to post bugs or other unusual errors that aren't the result of a failed or incorrect installation (see the [http://code.google.com/p/dingoo-sdk/source/browse/trunk/dingoo_sdk/ReadMe.txt ReadMe.txt] file). We are also open to feature requests and suggestions as time allows.
