--- a/wiki/GeneralInformation.wiki
+++ b/wiki/GeneralInformation.wiki
@@ -1,26 +1,45 @@
 #summary The primary goals of the Dingoo_SDK project.
 #labels Featured,Phase-Deploy,Phase-Support,Phase-Requirements,Phase-Design
 
+The wiki page list can be found [http://code.google.com/p/dingoo-sdk/wiki here].
+
 = Introduction =
 
-Dingoo_SDK is meant to serve as a multiplatform SDK for the Dingoo A320.
+Dingoo_SDK is meant to serve as a multi-platform SDK for the Dingoo A320's native operating system which is a variant of uCOS II.
 
 == Requirements ==
+
 === Linux ===
   * [http://flatmush.juliusparishy.com/a320/toolchain/mipsel-4.1.2-nopic.tar.bz2 Ingenic toolchain]
   * [http://www.stack.nl/~dimitri/doxygen/ Doxygen 1.5.8] (for building the documentation)
   * GNU make
+
 === Windows ===
   * [http://www.cygwin.com/setup.exe CYGWIN (Latest version, though any version should work)]
     * GNU make
   * [http://www.stack.nl/~dimitri/doxygen/ Doxygen 1.5.8] (for building the documentation)
   * [http://flatmush.juliusparishy.com/a320/toolchain/mipsel-gcc4.1-cygwin-nopic.tar.bz2 Windows MIPSEL Compiler]
+
 == Getting Help ==
+
 === Read Me ===
 The [http://code.google.com/p/dingoo-sdk/source/browse/trunk/dingoo_sdk/ReadMe.txt ReadMe.txt] file included in the highest level of the $DINGOO_SDK directory is the first place you should check for help. There are step-by-step installation instructions there for both Windows and Linux/UNIX build environments.
 === Wiki ===
 The wiki is currently a work-in-progress and may not contain much helpful information at the moment, but we are actively working on it.
+
 === Documentation ===
 Use Doxygen to build HTML documentation in the $DINGOO_SDK/doc directory. See the [http://code.google.com/p/dingoo-sdk/source/browse/trunk/dingoo_sdk/ReadMe.txt ReadMe.txt] for instructions.
+
 === Issues ===
 The issues tracker is the best place to post bugs or other unusual errors that aren't the result of a failed or incorrect installation (see the [http://code.google.com/p/dingoo-sdk/source/browse/trunk/dingoo_sdk/ReadMe.txt ReadMe.txt] file). We are also open to feature requests and suggestions as time allows.
+
+=== Chat ===
+  *IRC:
+    * #dingoo-a320 on irc.freenode.net
+    * #dingoonity on irc.freenode.net
+  *Forums:
+    *[http://boards.dingoonity.org/ Dingoonity]
+    *[http://www.gp32x.com/board/index.php?/forum/73-dingoo-a320/ gp32x]
+  *Email:
+    * Developers emails can be found in the project owners/contributors list [http://code.google.com/p/dingoo-sdk/people/list here].
+
