Add modplay compilation

--- a/dingoo_sdk/install
+++ b/dingoo_sdk/install
@@ -14,11 +14,13 @@ cd $DINGOO_SDK/src/libc && make clean && make headers
 cd $DINGOO_SDK/src/jz4740 && make clean && make headers
 cd $DINGOO_SDK/src/sml && make clean && make headers
 cd $DINGOO_SDK/src/fgl && make clean && make headers
+cd $DINGOO_SDK/src/modplay && make clean && make headers
 
 cd $DINGOO_SDK/src/libc && make
 cd $DINGOO_SDK/src/jz4740 && make
 cd $DINGOO_SDK/src/sml && make
 cd $DINGOO_SDK/src/fgl && make
+cd $DINGOO_SDK/src/modplay && make
 
 rm -f $DINGOO_SDK/lib/libgcc.a
 cp $MIPSTOOLS/lib/gcc/mipsel-linux/*/libgcc.a $DINGOO_SDK/lib/
