--- a/wiki/DevelopedApplications.wiki
+++ b/wiki/DevelopedApplications.wiki
@@ -7,6 +7,8 @@
   * [http://dingoo-scene.blogspot.com/2010/04/wubtris-mojo-so-lets-roll-smile-tower.html Wubtris]
   * [http://www.portabledev.com/pages/dingoo/jeuxdev.-perso/smsgoo.php SmsGGOO]  (Sega Master System a.k.a. Sega Genesis emulator)
   * [http://boards.dingoonity.org/dingoo-development/new-example-for-flatmusk-plateform-sdk/ Voxel engine demo]
+  * [http://boards.dingoonity.org/dingoo-releases/spoout-v3/ Spoout]
+  * Chipworld (on its way)
 
 == Applications ==
   * [http://code.google.com/p/dingoo-sdk/downloads/list Overclocker] (included with the SDK)
