--- a/dingoo_sdk/install
+++ b/dingoo_sdk/install
@@ -10,6 +10,16 @@ if [ ! -d "$MIPSTOOLS" ]; then
 	exit 0
 fi
 
+if [ -d "$WINDIR" ]; then
+	SET nodosfilewarning
+	$DINGOO_SDK/tools/mipstools_fix/mipstools_fix
+else
+	rm -f $DINGOO_SDK/tools/elf2app/elf2app
+	cc $DINGOO_SDK/tools/elf2app/src/*.c -o $DINGOO_SDK/tools/elf2app/elf2app
+	rm -f $DINGOO_SDK/tools/bin2h/bin2h
+	cc $DINGOO_SDK/tools/bin2h/src/bin2h.c -o $DINGOO_SDK/tools/bin2h/bin2h
+fi
+
 cd $DINGOO_SDK/src/libc && make clean && make headers
 cd $DINGOO_SDK/src/jz4740 && make clean && make headers
 cd $DINGOO_SDK/src/sml && make clean && make headers
@@ -22,15 +32,6 @@ cd $DINGOO_SDK/src/modplay && make
 
 rm -f $DINGOO_SDK/lib/libgcc.a
 cp $MIPSTOOLS/lib/gcc/mipsel-linux/*/libgcc.a $DINGOO_SDK/lib
-
-if [ -d "$WINDIR" ]; then
-	$DINGOO_SDK/tools/mipstools_fix/mipstools_fix
-else
-	rm -f $DINGOO_SDK/tools/elf2app/elf2app
-	cc $DINGOO_SDK/tools/elf2app/src/*.c -o $DINGOO_SDK/tools/elf2app/elf2app
-	rm -f $DINGOO_SDK/tools/bin2h/bin2h
-	cc $DINGOO_SDK/tools/bin2h/src/bin2h.c -o $DINGOO_SDK/tools/bin2h/bin2h
-fi
 
 rm -f $DINGOO_SDK/lib/dingoo.xn
 echo "ENTRY(AppMain)
