--- a/wiki/DevelopedApplications.wiki
+++ b/wiki/DevelopedApplications.wiki
@@ -5,9 +5,10 @@
   * [http://code.google.com/p/dingoo-sdk/downloads/list MineSweeper] (included with the SDK)
   * [http://www.harteex.com/?page=samegoo SameGoo]
   * [http://dingoo-scene.blogspot.com/2010/04/wubtris-mojo-so-lets-roll-smile-tower.html Wubtris]
-  * [http://www.portabledev.com/pages/dingoo/jeuxdev.-perso/smsgoo.php SmsGGOO]  (Sega Master System a.k.a. Sega Genesis emulator)
+  * [http://www.portabledev.com/pages/dingoo/jeuxdev.-perso/smsgoo.php SmsGGOO]  (Sega Master System)
   * [http://boards.dingoonity.org/dingoo-development/new-example-for-flatmusk-plateform-sdk/ Voxel engine demo]
   * [http://boards.dingoonity.org/dingoo-releases/spoout-v3/ Spoout]
+  * [http://boards.dingoonity.org/dingoo-releases/wolfenstein-3d-v1-0/ Wolfenstein 3D and Spear of Destiny]
   * Chipworld (on its way)
 
 == Applications ==
