--- a/wiki/DevelopedApplications.wiki
+++ b/wiki/DevelopedApplications.wiki
@@ -9,11 +9,11 @@
   * [http://boards.dingoonity.org/dingoo-development/new-example-for-flatmusk-plateform-sdk/ Voxel engine demo]
   * [http://boards.dingoonity.org/dingoo-releases/spoout-v3/ Spoout]
   * [http://boards.dingoonity.org/dingoo-releases/wolfenstein-3d-v1-0/ Wolfenstein 3D and Spear of Destiny]
-  * [http://boards.dingoonity.org/dingoo-releases/chip-world-1-0/ Chipworld]
+  * [http://www.harteex.com/?page=chipworld Chipworld]
   * [http://boards.dingoonity.org/dingoo-releases/arcade-volleyball-0-2/ Arcade Volleyball]
 
 == Applications ==
   * [http://code.google.com/p/dingoo-sdk/downloads/list Overclocker] (included with the SDK)
-  * [http://boards.dingoonity.org/dingoo-releases/samegoo-1-2-stopwatch-1-1/ StopWatch]
+  * [http://www.harteex.com/?page=stopwatch StopWatch]
 
 Know of another game or application? Have a correction that needs to be made? Please [http://code.google.com/p/dingoo-sdk/issues/entry submit an issue ticket].
