--- a/dingoo_sdk/install
+++ b/dingoo_sdk/install
@@ -22,12 +22,14 @@ fi
 
 cd $DINGOO_SDK/src/jz4740 && make clean && make headers
 cd $DINGOO_SDK/src/libc && make clean && make headers
+cd $DINGOO_SDK/src/libm && make clean && make headers
 cd $DINGOO_SDK/src/libstdc++ && make clean && make headers
 cd $DINGOO_SDK/src/sml && make clean && make headers
 cd $DINGOO_SDK/src/modplay && make clean && make headers
 
 cd $DINGOO_SDK/src/jz4740 && make
 cd $DINGOO_SDK/src/libc && make
+cd $DINGOO_SDK/src/libm && make
 cd $DINGOO_SDK/src/libstdc++ && make
 cd $DINGOO_SDK/src/sml && make
 cd $DINGOO_SDK/src/modplay && make
