Add zlib and libpng to install

--- a/dingoo_sdk/install
+++ b/dingoo_sdk/install
@@ -26,6 +26,8 @@ cd $DINGOO_SDK/src/libm && make clean && make headers
 cd $DINGOO_SDK/src/libstdc++ && make clean && make headers
 cd $DINGOO_SDK/src/sml && make clean && make headers
 cd $DINGOO_SDK/src/modplay && make clean && make headers
+cd $DINGOO_SDK/src/zlib && make clean && make headers
+cd $DINGOO_SDK/src/libpng && make clean && make headers
 
 cd $DINGOO_SDK/src/jz4740 && make
 cd $DINGOO_SDK/src/libc && make
@@ -33,6 +35,8 @@ cd $DINGOO_SDK/src/libm && make
 cd $DINGOO_SDK/src/libstdc++ && make
 cd $DINGOO_SDK/src/sml && make
 cd $DINGOO_SDK/src/modplay && make
+cd $DINGOO_SDK/src/zlib && make
+cd $DINGOO_SDK/src/libpng && make
 
 rm -f $DINGOO_SDK/lib/libgcc.a
 cp $MIPSTOOLS/lib/gcc/mipsel-linux/*/libgcc.a $DINGOO_SDK/lib
