--- a/trunk/dingoo_sdk/install
+++ b/trunk/dingoo_sdk/install
@@ -28,6 +28,10 @@ cd $DINGOO_SDK/src/sml && make clean && make headers
 cd $DINGOO_SDK/src/modplay && make clean && make headers
 cd $DINGOO_SDK/src/zlib && make clean && make headers
 cd $DINGOO_SDK/src/libpng && make clean && make headers
+cd $DINGOO_SDK/src/freetype && make clean && make headers
+cd $DINGOO_SDK/src/tremor && make clean && make headers
+cd $DINGOO_SDK/src/libmikmod/dingoo && make clean && make headers
+cd $DINGOO_SDK/src/SDL && make clean && make headers
 
 cd $DINGOO_SDK/src/jz4740 && make
 cd $DINGOO_SDK/src/libc && make
@@ -37,6 +41,10 @@ cd $DINGOO_SDK/src/sml && make
 cd $DINGOO_SDK/src/modplay && make
 cd $DINGOO_SDK/src/zlib && make
 cd $DINGOO_SDK/src/libpng && make
+cd $DINGOO_SDK/src/freetype && make
+cd $DINGOO_SDK/src/tremor && make
+cd $DINGOO_SDK/src/libmikmod/dingoo && make
+cd $DINGOO_SDK/src/SDL && make
 
 rm -f $DINGOO_SDK/lib/libgcc.a
 cp $MIPSTOOLS/lib/gcc/mipsel-linux/*/libgcc.a $DINGOO_SDK/lib
