Edited wiki page GeneralInformation through web user interface.

--- a/wiki/GeneralInformation.wiki
+++ b/wiki/GeneralInformation.wiki
@@ -5,7 +5,7 @@ The wiki page list can be found [http://code.google.com/p/dingoo-sdk/wiki here].
 
 = Introduction =
 
-Dingoo_SDK is meant to serve as a multi-platform SDK for the Dingoo A320's native operating system which is a variant of uCOS II.
+Dingoo_SDK is meant to serve as a multi-platform SDK for the [http://en.wikipedia.org/wiki/Dingoo Dingoo] A320's native operating system which is a variant of [http://en.wikipedia.org/wiki/MicroC/OS-II µC/OS-II] (uCOS II).
 
 For a list of games and applications built using some variant of the SDK, see the [DevelopedApplications] wiki page.
 
