Corrected Linux requirements, added local mirror location.

--- a/wiki/GeneralInformation.wiki
+++ b/wiki/GeneralInformation.wiki
@@ -12,15 +12,16 @@ For a list of games and applications built using some variant of the SDK, see th
 == Requirements ==
 
 === Linux ===
-  * [http://flatmush.juliusparishy.com/a320/toolchain/mipsel-4.1.2-nopic.tar.bz2 Ingenic toolchain] ([http://www.mediafire.com/download.php?9121dr9s0rqzcq5 mirror])
+  * [http://code.google.com/p/dingoo-sdk/downloads/detail?name=mipsel-4.1.2-nopic.tar.bz2&can=2&q= Ingenic toolchain] [http://flatmush.juliusparishy.com/a320/toolchain/mipsel-4.1.2-nopic.tar.bz2 mirror1] ([http://www.mediafire.com/download.php?9121dr9s0rqzcq5 mirror])
   * [http://www.stack.nl/~dimitri/doxygen/ Doxygen 1.5.8] (for building the documentation)
   * GNU make
+  * cc (i.e. native compiler, ideally gcc) needed to build elf2app and bin2h
 
 === Windows ===
   * [http://www.cygwin.com/setup.exe CYGWIN (Latest version, though any version should work)]
     * GNU make
   * [http://www.stack.nl/~dimitri/doxygen/ Doxygen 1.5.8] (for building the documentation)
-  * [http://flatmush.juliusparishy.com/a320/toolchain/mipsel-gcc4.1-cygwin-nopic.tar.bz2 Windows MIPSEL Compiler] ([http://www.mediafire.com/download.php?zznd5ijlyiz mirror]) [http://code.google.com/p/dingoo-sdk/downloads local mirror]
+  *  [http://code.google.com/p/dingoo-sdk/downloads/detail?name=mipsel-gcc4.1-cygwin-nopic.tar.bz2&can=2&q= Windows MIPSEL Compiler] [http://flatmush.juliusparishy.com/a320/toolchain/mipsel-gcc4.1-cygwin-nopic.tar.bz2 mirror1] ([http://www.mediafire.com/download.php?zznd5ijlyiz mirror2])
 
 == Getting Help ==
 
