Edited wiki page DevelopedApplications through web user interface.

--- a/wiki/DevelopedApplications.wiki
+++ b/wiki/DevelopedApplications.wiki
@@ -24,6 +24,8 @@
   * [http://code.google.com/p/unrealspeccyp/ Unreal Speccy Portable] (ZX-Spectrum)
   * [http://code.google.com/p/timgoo/ VectorGOO] (Vector-06C)
   * [http://code.google.com/p/nzeemin-opensrc/ Vectrex SDL] (Vectrex)
+  * [http://code.google.com/p/gnuboy/wiki/DingooPort gnuboy]
+  * [http://code.google.com/p/ohboy  Oh Boy (sdlgnuboy with menu)]
 
 == Applications ==
   * [http://code.google.com/p/dingoo-sdk/downloads/list Overclocker] (included with the SDK)
